2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/linksrc/Makefile.in,
	  sdas/linksrc/aslink.h,
	  sdas/linksrc/lkout.c,
	  sdas/linksrc/lks19.c:
	  Port Motorola SREC format support from upstream asxxxx 5.40 to fix bug #3559.

2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3585.c:
	  Fix bug #3585.

2023-05-01 Felix Salfelder <felix AT salfelder.org>

	* support/sdbinutils/bfd/{asxxxx,targets}.c:
	  Fix bug #3569 and a memory leak.

2023-05-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3352.c,
	  support/regression/tests/bug-3465.c,
	  support/regression/tests/bug-3523.c,
	  support/regression/tests/bug-3532.c,
	  support/regression/tests/bug-3547.c:
	  Disable warning 85 for some tests (as parameters are intentionally unused in these).

2023-05-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3563.c:
	  Regression test for bug #3563 (disabled for mcs51, as the bug is not yet fixed).
	* src/SDCCmem.c,
	  support/regression/tests/*.c:
	  Fix bug #2874.

2023-05-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3579.c:
	  iy handling fixes in code generation.

2023-04-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCdwarf2.c:
	  Fix bug #3576.

2023-04-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asz80/z80mch.c:
	  Fix error message on use of undocumented inc/dec ixl/ixh/iyl/iyh. Fix error message on undocumented load between ix/iy l/h. Fix bug #3574.

2023-04-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c:
	  Improve error message on missing skip instruction target label at end of inline asm in __naked function. Fix bug #3566.
	* src/SDCCast.c,
	  support/regression/tests/bug-3570.c:
	  Fix bug #3570.
	* src/SDCCmem.c:
	  Fix bug #3030.

2023-03-21 Felix Salfelder <felix AT salfelder.org>

	* src/SDCCmain.c: