@@ -1,3 +1,9 @@
+2023-05-16 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCClrange.c,
+	  support/regression/tests/bug-3455.c:
+	  Fix bug #3455.
+
 2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* sdas/linksrc/Makefile.in,
